Fix highlighting on `gap`.

--- a/assets/syntax.css
+++ b/assets/syntax.css
@@ -107,7 +107,7 @@
 	color: #bb0066;
 }
 .highlight .py {
-	color: #336699;
+	color: #905;
 }
 .highlight .nt {
 	color: #905;
